# GrafanaAIPanel

./: .env.example  README.md  pyproject.toml
grafana-ai-panel/: MIGRATE_TO_CREATE_PLUGIN.md  README.md  copy-src-into-plugin.ps1  package.json  tsconfig.json
grafana-ai-panel/src/: module.ts  plugin.json  types.ts
grafana-ai-panel/src/panel/: AiPanel.tsx
grafana-ai-panel/src/utils/: data_summary.ts  digest.ts  frames.ts  stats.ts  time.ts
src/grafana_ai/: ai_client.py  analyzer.py  anomaly.py  api_models.py  cli.py  config.py  dashboard_digest.py  dataframe.py  datasource_query.py  grafana_client.py  prompt_compact.py  pyvenv.cfg  report.py  series_stats.py  server.py  time_range.py  timeseries_analysis.py
src/grafana_ai.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
